--- a/TODO.txt
+++ b/TODO.txt
@@ -4,3 +4,4 @@ a channel recovery failure that results in a connection recovery should wait on 
 ability to await recovery of a resource. perhaps can be addressed with listeners.
 consider throwing RecoveryInProgressException or something like that if an invocation fails while recovery is in progress. this is perhaps a better alternative to AlreadyClosedException which implies that things are hosed for good.
 config for individual consumers
+better handling of alreadyclosedexceptions using the closed resource's shutdown cause
